crates/deadline-cli/tests/snapshots/cli_diagnostics__job_list_tasks_prints_tasks.snap
---
source: crates/deadline-cli/tests/cli_diagnostics.rs
info:
  program: deadline
  args:
    - job
    - list-tasks
    - "--job-id"
    - job-001
    - "--step-id"
    - step-001
  env:
    AWS_ACCESS_KEY_ID: AKIAIOSFODNN7EXAMPLE
    AWS_CONFIG_FILE: ""
    AWS_DEFAULT_PROFILE: ""
    AWS_DEFAULT_REGION: us-west-2
    AWS_ENDPOINT_URL: ""
    AWS_ENDPOINT_URL_DEADLINE: "http://localhost:65126"
    AWS_ENDPOINT_URL_STS: "http://localhost:65126"
    AWS_PROFILE: ""
    AWS_SECRET_ACCESS_KEY: wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
    AWS_SECURITY_TOKEN: ""
    AWS_SESSION_TOKEN: ""
    AWS_SHARED_CREDENTIALS_FILE: ""
    DEADLINE_CONFIG_FILE_PATH: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmppi9kdx/config
    HOME: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmppi9kdx
---
success: true
exit_code: 0
----- stdout -----
- taskId: task-001
  runStatus: SUCCEEDED
  createdAt: 2024-12-18 00:00:00+00:00
- taskId: task-002
  runStatus: FAILED
  createdAt: 2024-12-18 00:01:00+00:00


----- stderr -----
